# Babelarr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  app.py  config.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: tests.yml
babelarr/: __init__.py  app.py  cli.py  concurrency.py  config.py  ignore.py  jellyfin_api.py  libretranslate_api.py  mkv.py  mkv_probe_cache.py  mkv_scan.py  mkv_work_index.py  mkv_workflow.py  profiling.py  profiling_ui.py  queue_db.py  sidecar_cleanup.py  tdarr_webhook.py  translator.py  watch.py  web.py  worker.py
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_ignore.py  test_jellyfin_api.py  test_jellyfin_refresh.py  test_libretranslate_api.py  test_mkv.py  test_mkv_integration.py  test_mkv_probe_cache.py  test_mkv_scan.py  test_mkv_scan_integration.py  test_mkv_scan_unit.py  test_mkv_work_index.py  test_profiling.py  test_profiling_ui.py  test_queue.py  test_queue_db.py  test_sidecar_cleanup.py  test_sidecar_cleanup_async.py  test_tdarr_webhook.py  test_translate.py  test_translator.py  test_watch.py  test_worker.py
tests/fixtures/: sample_subs.mkv
